# sandbox

./: README.md  price_checker.py  price_history.json
healthos/: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Procfile  README.md  alembic.ini  claude_desktop_config.example.json  pyproject.toml  railway.json
healthos/alembic/: env.py
healthos/alembic/versions/: 0001_initial_schema.py  0002_oauth_tokens.py  0003_calendar_events.py
healthos/docs/: HealthOS-Status-and-Roadmap.md
healthos/frontend/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
healthos/frontend/src/: App.jsx  api.js  format.js  index.css
healthos/frontend/src/components/: AttributionPanel.jsx  CalendarStrip.jsx  CorrelationCard.jsx  (+6 more)
healthos/healthos/: __init__.py  authcheck.py  canonical.py  cli.py  config.py  correlate.py  database.py  main.py  models.py  queries.py  setup_wizard.py  stats.py  tokenstore.py
healthos/healthos/api/: __init__.py  admin.py  auth.py  events.py  metrics.py  webhooks.py
healthos/healthos/inference/: __init__.py  behavioral.py
healthos/healthos/mcp_server/: __init__.py  server.py
healthos/healthos/sync/: __init__.py  calendar.py  eight_sleep.py  garmin.py  persistence.py  runner.py  scheduler.py  whoop.py
healthos/scripts/: backfill.py
healthos/tests/: conftest.py  test_api.py  test_authcheck.py  test_calendar.py  test_eight_sleep.py  test_events.py  test_garmin.py  test_inference.py  test_persistence.py  test_qa_fixes.py  test_scheduler_toggle.py  test_setup_wizard.py  test_stats.py  test_tokenstore.py
(+15 files in other folders)
